Zitate nutzen nun Literaturverwaltungssystem

--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -43,7 +43,7 @@ Diese Methodik ist Grundlage jeden juristischen Studiums und wird dort als sog. 
 
 Der \textbf{Obersatz} stellt die \enquote{Fallfrage} dar, die zu prüfen ist. Im bereits oben verwendeten Beispiel der \enquote{grundsätzlichen Bestimmung} lautete die konkrete Frage also: \Zitat{Ist die fragliche Satzungsbestimmung eine grundlegende Bestimmung im Sinne von \S~14~BS?}
 
-Die \textbf{Definition} gibt Antwort auf die im Obersatz implizit gestellte Frage \Zitat{Was ist überhaupt eine grundsätzliche Bestimmung?}. Wenn nicht auf bestehende Rechtsprechung zurückgegriffen werden kann\footnote{Vgl. hierzu ausführlich \href{https://wiki.piratenbrandenburg.de/images/f/f2/LSG-Bbg-13-5\_Urteil\_2014\_07\_09.pdf}{LSG~Bbg~13/5} vom 9. Juli 2014, S.8; \href{http://piraten-bsg.de/git/BSG\%2012-15-H\%20S.pdf}{BSG~12/15-H~S} vom 28. Mai 2015, S.~5.} muss hier durch Auslegung eine Definition bestimmt werden.
+Die \textbf{Definition} gibt Antwort auf die im Obersatz implizit gestellte Frage \Zitat{Was ist überhaupt eine grundsätzliche Bestimmung?}. Wenn nicht auf bestehende Rechtsprechung zurückgegriffen werden kann\footnote{Vgl. hierzu ausführlich \cite[S.~8]{LSGBB135}; \cite[S.~5]{BSG1215HS}.} muss hier durch Auslegung eine Definition bestimmt werden.
 
 Die \textbf{Subsumtion} ist der Schritt, in dem geprüft wird, ob der zu prüfende Sachverhalt die zuvor gefundene Definition erfüllt. Anstatt also zu entscheiden, ob eine Satzungsbestimmung \enquote{grundlegend} ist, wird nun entschieden, ob sie die Bedingungen erfüllt, die eine grundlegende Satzungsbestimmung ausmachen. Dieser Schritt beantwortet im Endeffekt die Fallfrage; anhand der Definition aber wird begründet, warum die Antwort \enquote{Ja} oder \enquote{Nein} lautet. Während sich also an der Frage nichts ändert, bietet die Subsumtion unter einen zuvor definierten Begriff eine nachvollziehbare und begründete Antwort.
 
@@ -65,7 +65,7 @@ Diese Methoden werden im Folgenden kurz und in ihren Grundzügen dargestellt.
 Diese Methode wird auch als grammatische oder semantische Auslegung bezeichnet. Sie setzt an der Bedeutung der verwendeten Begriffe an und ist damit der Ausgangspunkt einer jeden Auslegung. Dem Wortlaut nach auszulegen bedeutet, zu prüfen, ob ein bestimmter Begriff des Sachverhalts unmittelbar unter einen Begriff der fraglichen Norm zu fassen ist. Die Begriffe müssen daher jeweils ihrer eigenen Bedeutung und dem Kontext ihrer Verwendung nach zueinander passen. Dabei wird es Fälle geben, in denen diese Frage eindeutig mit \enquote{Ja} zu beantworten ist, andere, in denen die Antwort eindeutig \enquote{Nein} lautet. Schließlich wird es Fälle geben, die nicht eindeutig sind. Je näher der Begriff des Sachverhalts dem Begriff der Norm ist und je besser er auch ihren Sinn erfüllt, desto eher spricht das für eine \emph{weite} Auslegung des Norm-Begriffs. Umgekehrt kann auch \emph{eng} ausgelegt werden, d.h. die \enquote{Zweifelsfälle} werden gerade nicht zugelassen.
 
 \subsubsection{Systematische Auslegung}
-Die Systematische Auslegung betrachtet nicht die einzelne Norm, sondern ihre Stellung im Gesamtgefüge des \enquote{Systems} ihres Rechtsgebiets (bspw. einer Satzung). Dabei gelten die folgenden vier Postulate:\footnote{Vgl. umfassend: Puppe, Kleine Schule des juristischen Denkens, Göttingen 2008, S.~66~ff.}
+Die Systematische Auslegung betrachtet nicht die einzelne Norm, sondern ihre Stellung im Gesamtgefüge des \enquote{Systems} ihres Rechtsgebiets (bspw. einer Satzung). Dabei gelten die folgenden vier Postulate:\footnote{Vgl. umfassend: \cite[S.~66~ff.]{Puppe2008}}
 \begin{enumerate}
 \item \textbf{Das Postulat der Widerspruchsfreiheit:} Das Gesetz widerspricht sich nicht selbst.
 \item \textbf{Das Postulat der Nichtredundanz:} Das Gesetz sagt nichts Überflüssiges.
@@ -84,7 +84,7 @@ Systematische Ordnung bedeutet, dass die Anordnung von Einzelnormen im Gesamtreg
 \subsubsection{Historische Auslegung}
 Die historische Auslegung befasst sich mit der Entstehungs- und Änderungsgeschichte einer Norm. Bspw. aus Diskussionsprotokollen kann hervorgehen, ob nach dem Willen der Autorinnen und Autoren ein Sachverhalt vom Tatbestand einer Norm erfasst werden sollte, oder nicht. Ebenso ist eine Änderung, die dazu führte, dass ein einstmals eindeutig erfasster Sachverhalt nun zweifelhaft erscheint, ein klares Indiz für eine enge Auslegung der jeweiligen Norm.
 
-Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Mit der \enquote{Vertragstheorie}, die davon ausgeht, dass die Satzung als Grundlagendokument einer privatrechtlichen Vereinigung letztlich ein privatrechtlicher Vertrag ist, der ein \enquote{Eigenleben} entwickelt hat, kann man zudem argumentieren, dass \S~157~BGB\index[paridx]{BGB!\S~157} insb. durch den Verweis auf die (aktuelle) \Zitat{Verkehrssitte} einen starken Gegenwartsbezug aufweist. Aus diesen Argumenten wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{Sauter, Rn.~36.} Ausnahmen hiervon sind daher stets gut zu begründen!
+Für die Satzungen privatrechtlicher Organisationen (so auch Parteien) gilt jedoch allgemein, dass ihre Satzungen aus sich heraus verständlich sein sollen. Weder soll Recherche zu (ohnehin selten in der notwendigen Ausführlichkeit bestehenden) Protokollen, noch zu alten Fassungen der Satzung notwendig sein. Mit der \enquote{Vertragstheorie}, die davon ausgeht, dass die Satzung als Grundlagendokument einer privatrechtlichen Vereinigung letztlich ein privatrechtlicher Vertrag ist, der ein \enquote{Eigenleben} entwickelt hat, kann man zudem argumentieren, dass \S~157~BGB\index[paridx]{BGB!\S~157} insb. durch den Verweis auf die (aktuelle) \Zitat{Verkehrssitte} einen starken Gegenwartsbezug aufweist. Aus diesen Argumenten wird abgeleitet, dass sich die historische Auslegung allgemein verbietet.\footnote{\cite[Rn.~36]{sauter2010}.} Ausnahmen hiervon sind daher stets gut zu begründen!
 
 \subsubsection{Teleologische Interpretation}
 Die teleologische Interpretation leitet sich von \enquote{τέλος} (gr. \enquote{Ziel}) ab. Der Schwerpunkt liegt hier also auf dem Zweck der Norm, nicht auf ihrem Wortlaut. In die Nähe zur historischen Auslegung rückt dabei die Fragestellung, was der ursprüngliche Zweck der Norm war, besser: ist. In die Nähe der systematischen Auslegung rückt die Frage, was mit einer solchen Norm \enquote{objektiv sinnvoll} bezweckt werden kann; hier wird nach dem Sinn und Zweck der Norm im aktuellen Gefüge gefragt. Die Antworten auf diese Fragen geben regelmäßig den Ausschlag, wenn bloße Wortlaut- und systematische Auslegung nicht weiter geholfen haben.
