Fehlerhaften Autorennamen korrigiert

--- a/sghandbuch.bib
+++ b/sghandbuch.bib
@@ -63,7 +63,7 @@
   address = {Göttingen}
 }
 @BOOK{sauter2010,
-  author	= {Eugen Sauter / Gerhard Schweyer / Wolfram Walter},
+  author	= {Eugen Sauter und Gerhard Schweyer, Wolfram Waldner},
   title		= {Der eingetragene Verein},
   subtitle	= {Gemeinverständliche Erläuterungen des Vereinsrechts unter Berücksichtigung neuester Rechtsprechung mit Formularteil},
   shorthand	= {Sauter/Schweyer/Waldner},
