Verfahrensarten: Kommentare zu zukünftigem Inhalt hinzugefügt

--- a/Verfahrensarten.tex
+++ b/Verfahrensarten.tex
@@ -7,12 +7,14 @@
 %\blindtext[1]
 %\section{Gliederungsstreitigkeiten}
 %\blindtext[1]
-%\section{Grundlagen Ordnungsmaßnahmen}
+
+%\section{Grundlagen Ordnungsmaßnahmen} % besondere Prinzipien bei OMs: ne bis in idem, Analogieverbot
 %\blindtext[1]
 %\subsection{Gliederungsordnungsmaßnahmen}
 %\blindtext[5]
 %\subsection{Individualordnungsmaßnahmen}
 %\blindtext[5]
+
 %\section{Normenkontrolle}
 %\blindtext[1]
 
