Satzbau und Rechtschreibung korrigiert.

--- a/Verfahrensarten.tex
+++ b/Verfahrensarten.tex
@@ -1,6 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Grundsätzlich kann eine Klage darauf gerichtet sein, etwas rechtlich wirksames direkt zu ändern (Gestaltungsklage), bspw. einen Beschluss außer Kraft zu setzen (Anfechtungsklage), jemanden zu dazu zu verpflichten , etwas zu tun oder zu unterlassen (Leistungs- bzw. Verpflichtungsklage), oder das Bestehen oder Nichtbestehen eines Rechtsverhältnisses festzustellen (Feststellungsklage). Die Feststellungsklage tritt hinter eine statthafte Gestaltungs- oder Leistungsklage immer zurück, sie ist nur subsidiär zulässig. Ist eine Sache erledigt, d.h. hat sich der reale Sachverhalt so verändert, dass die Klage keine Änderung in der Sache mehr herbeiführen kann, ist das Verfahren in der Hauptsache erledigt. Nur in Fällen, in denen ein besonderes Fortsetzungsinteresse besteht (etwa zur Rehabilitierung) kann das Verfahren als Fortsetzungsfeststellungsklage weitergeführt werden. Originäre Normenkontrollklagen wie man sie etwa vom Bundesverfassungsgericht kennt, die eine Satzugnsbestimmung für sich komplett verwerfen,
- gibt es in Verfahren nach der SGO nicht.}
+\chapterpreamble{Grundsätzlich kann eine Klage darauf gerichtet sein, etwas rechtlich Wirksames direkt zu ändern (Gestaltungsklage), bspw. einen Beschluss außer Kraft zu setzen (Anfechtungsklage), jemanden zu dazu zu verpflichten, etwas zu tun oder zu unterlassen (Leistungs- bzw. Verpflichtungsklage), oder das Bestehen oder Nichtbestehen eines Rechtsverhältnisses festzustellen (Feststellungsklage). Die Feststellungsklage tritt hinter eine statthafte Gestaltungs- oder Leistungsklage immer zurück, sie ist nur subsidiär zulässig. Hat sich der reale Sachverhalt so verändert, dass die Klage keine Änderung in der Sache mehr herbeiführen kann, ist das Verfahren in der Hauptsache erledigt. Nur in Fällen, in denen ein besonderes Fortsetzungsinteresse besteht (etwa zur Rehabilitierung), kann das Verfahren als sog. Fortsetzungsfeststellungsklage weitergeführt werden. Originäre Normenkontrollklagen wie man sie etwa vom Bundesverfassungsgericht kennt, die eine Satzugnsbestimmung für sich komplett verwerfen, gibt es in Verfahren nach der SGO nicht.}
 
 \chapter{Verfahrensarten}
 %\section{Anfechtung von Mitgliederversammlungen}
