--- a/Normenauslegung.tex
+++ b/Normenauslegung.tex
@@ -17,7 +17,7 @@ Paragraphen gliedern sich zunächst in Absätze. Auch Absätze sind nummeriert, 
 \subsubsection{Das Normzitat}
 Da der Paragraph (Artikel) die wichtigste Gliederungsebene ist, ist er der Ausgangspunkt eines jeden Normzitats. Von ihm ausgehend wird \enquote{nach unten}, d.h. nach Absätzen, Sätzen, Nummern usw. zitiert. Je genauer der betreffende Abschnitt durch das Zitat benannt wird, desto leichter lässt er sich durch den Leser wiederfinden – es gilt: \Zitat{Viel hilft viel}! Erst am Ende wird das jeweilige Regelwerk benannt, dem der Paragraph entstammt.\footnote{Das \enquote{Quellregelwerk} erst am Ende zu benennen, mag der Ordnung des Zitats – \Zitat{vom Großen ins Kleine} – widersprechen, findet jedoch im juristischen Gebrauch absolute Verbreitung.} Die Gliederungsebenen zwischen der Ebene \enquote{Regelwerk} und der Ebene \enquote{Paragraph} werden nicht mitzitiert, da sie lediglich der systematischen Übersicht dienen; die Nennung von Regelwerk und nummeriertem Paragraphen reicht zur Auffindung bereits aus.\footnote{Es gibt daher auch keine vereinheitlichen Regeln über Verwendung oder gar Rangfolge dieser reinen \enquote{Gliederungsebenen}; sie können vom jeweiligen Gesetz- bzw. Satzungsgeber völlig frei verwendet werden.}
 
-\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\nomenclature{BS}{Bundessatzung (Abschnitt~A, Grundlagensatzung)}\index[paridx]{BS!\S~9a!Abs.~9~S.~2} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
+\textbf{Beispiel:} \S~9a Abs.~9 S.~2 Hs.~2~BS\index[paridx]{BS!\S~9a!Abs.~9~S.~2} (Paragraph~9a Absatz~9 Satz~2 Halbsatz~2 der Bundessatzung) schreibt vor, dass jedes Bundesvorstandsmitglied bei der Abfassung des Tätigkeitsberichts die Verantwortung für seine eigenen Tätigkeitsbereiche trägt. 
 
 \subsection{Tatbestände und Rechtsfolgen}
 Wichtiger als die formalen, äußeren Strukturen ist der semantische, innere Aufbau von Normen: Sie gliedern sich in \emph{Tatbestände} und \emph{Rechtsfolgen}. Dem zu Grunde liegt ein simples \emph{Wenn-Dann}-Prinzip: Wenn der Tatbestand erfüllt ist, tritt die Rechtsfolge ein.
