--- a/Standardworkflow-Anrufung.tex
+++ b/Standardworkflow-Anrufung.tex
@@ -1,5 +1,5 @@
 % \begin{refsection}
-\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
+\chapterpreamble{Trifft eine Anrufung beim Schiedsgericht ein, ist zu prüfen ob der Antragsteller antragsberechtigt ist (\S~8 Abs.~1 SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}) und ob die Anrufung formell vollständig ist (\S~8 Abs.~3 SGO). Die fristgerechte Klageerhebung ist bereits im Rahmen der Anrufung zu prüfen. Nur bei Zweifeln, die sich nicht ohne Ermittlungen klären lassen, ist das Verfahren zu eröffnen. Die Anschrift i.S.d. \S~8 Abs.~3 S.~1 SGO kann auch aus einer Postfachadresse bestehen.}
 
 \chapter{Schema für den Standardworkflow \enquote{Ich habe eine Anrufung erhalten}}
 Ein Schiedsgericht wird nur auf Anrufung tätig schreibt die SGO in \S~8 Abs.~1 S.~1 vor.
@@ -54,7 +54,7 @@ Aus dem Rahmen fallen natürlich auch immer die Berufungs- und Beschwerdeanrufun
 \label{Standardworkflow:Antragsgegner}
 Der Antragsgegner\index[idx]{Antragsgegner|textbf} oder die Antragsgegnerin ist ebenso notwendig und muss ebenso klar und eindeutig aus der Anrufung entnehmbar sein. Bezüglich der Vertretung gilt hier dasselbe wie bei dem \index[idx]{Antragsteller} Antragsteller bzw. der Antragstellerin.
 
-Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung} handelt es sicht um sogenannte kontradiktorische Verfahren.
+Bei allen Verfahren nach SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)} handelt es sicht um sogenannte kontradiktorische Verfahren.
 Das bedeutet, dass das Verfahren Streit von zwei Parteien um gegenläufige Interessen ausgestaltet ist.
 In den meisten Fällen ist der Antragsgegner bzw. die Antragsgegnerin daher ein Organ, in wenigen Fällen aber auch ein Mitglied.
 Wichtig dabei ist aber: Es gibt nach SGO keine Verfahren von Mitgliedern gegen andere Mitglieder.
