--- a/Urteilsaufbau.tex
+++ b/Urteilsaufbau.tex
@@ -4,7 +4,7 @@
 \chapter{Urteilsaufbau}
 
 \section{Grundlagen}
-Gem. \S~12 Abs.~3 S.~1~SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}\index[paridx]{SGO!\S~12!Abs.~3 S.~1} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.} Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen. Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts. Sie wird im \emph{Tenor} aufgeführt. Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet. Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen. Während gem. \S11 Abs.~7~SGO\index[paridx]{SGO!\S~11!Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
+Gem. \S~12 Abs.~3 S.~1~SGO\nomenclature{SGO}{Schiedsgerichtsordnung (Abschnitt~C der Bundessatzung)}\index[paridx]{SGO!\S~12!Abs.~3} enthält ein Urteil \Zitat{einen Tenor, eine Sachverhaltsdarstellung und eine Begründung der Sach- und Rechtslage.} Es empfiehlt sich, dieser Aufzählung notwendiger Inhalte auch in der Reihenfolge zu folgen. Ein Urteil beginnt daher, nach einigen Formalien im \emph{Rubrum}, mit der letztendlichen Entscheidung des Gerichts. Sie wird im \emph{Tenor} aufgeführt. Erst danach wird der \emph{Sachverhalt} dargestellt und die im Tenor verkündeten Entscheidungen des Gerichts in den \emph{Entscheidungsgründen} begründet. Sofern gegen das Urteil Rechtsmittel eingelegt werden können, wird es mit einer \emph{Rechtsmittelbelehrung} abgeschlossen. Während gem. \S11 Abs.~7~SGO\index[paridx]{SGO!\S~11!Abs.~7} lediglich die Dokumentationsvorschriften explizit auch für einstweilige Anordnungen gelten, ist es gängige Praxis, sämtliche Vorschriften über Urteile auf einstweilige Anordnungen sinngemäß anzuwenden.
 
 Anders als bei Urteilen des Europäischen Gerichtshofes oder z.B. französischen Gerichten oder Gerichten aus dem angelsächsischen Rechtsraum werden Urteile in Deutschland regelmäßig in \enquote{ganz normalem Fließtext} verfasst, d.h. als mehrere Sätze, in Absätze unterteilt, regelmäßig mit Zwischenüberschriften gegliedert. Die Parteien werden im Rahmen der Schiedsgerichtsordnung schlicht als \emph{Antragstellerinnen} und \emph{Antragsgegnerinnen} bezeichnet (nicht etwa als Klägerinnen und Beklagte); \enquote{Angeklagte} kennt die SGO auch im Falle von Ordnungsmaßnahmen nicht. Auch sonst sollte die Sprache möglichst einfach gehalten sein: Ein gutes Urteil kommt ohne komplexe Schachtelsätze aus.
 
@@ -69,7 +69,10 @@ Gefahren bestehen bei \emph{obiter dicta} allerdings (auch) darin, dass sie spä
 Wenngleich die Verwendung von \emph{obiter dicta} innerhalb der Schiedsgerichtsbarkeit der Piratenpartei häufiger und ausführlicher vorkommen dürfte – und darf – als das bei staatlichen Gerichten der Fall ist, ist bei ihrer Verwendung äußerste Vorsicht geboten.
 
 \subsection{Abweichende Meinungen}
-Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen, anstatt sie über die Urteilsbegründungen zu verteilen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
+Gemäß \S~12 Abs.~4 S.~1~SGO\index[paridx]{SGO!\S~12!Abs.~4} haben die Richter \Zitat{das Recht, in der Urteilsbegründung eine abweichende Meinung zu äußern.} Dieses Recht besitzt unter den staatlichen Gerichten der Bundesrepublik Deutschland lediglich die Verfassungsgerichtsbarkeit (vgl. z.B. \S~30 Abs.~s~BVerfGG\index[paridx]{BVerfGG!\S~30!Abs.~2}\nomenclature{BVerfGG}{Bundesverfassungsgerichtsgesetz}).
+In der Piratenpartei steht es allen Richterinnen und Richtern zu, gleich welcher Ordnung ihres Schiedsgerichts. Die Bestimmung zu Sondervoten stellt damit eine der eben dort genannten Ausnahmen zur ansonsten geltenden Regel, über \enquote{dienstliche} Vorgänge Stillschweigen zu bewahren (\S~2 Abs.~4~SGO\index[paridx]{SGO!\S~2!Abs.~4}), dar.
+
+Obwohl der Wortlaut darauf hindeutet, dass die abweichende Meinung (auch als \enquote{Sondervotum}, plural \enquote{Sondervoten}, bezeichnet) innerhalb der Urteilsbegründung formuliert werden soll, ist die Vorschrift in der bisherigen Praxis so ausgelegt worden, dass sie außerhalb der eigentlichen Urteilsbegründung, aber innerhalb des Urteils verfasst wird. Auf diese Weise bleibt die mehrheitlich beschlossene Begründung in sich konsistent und wird nicht durch Diskussionen innerhalb des Spruchkörpers unterbrochen. Es empfiehlt sich stattdessen, die abweichende(n) Meinung(en) zusammenhängend ans Ende des Urteilstext als eigenen Abschnitt anzuhängen und sie gesondert kenntlich zu machen, anstatt sie über die Urteilsbegründungen zu verteilen. Das erleichtert insbesondere den Parteien, aber auch der Parteiöffentlichkeit und anderen Schiedsgerichten das Lesen. Sofern eine Rechtsmittelbelehrung (s.u.) erfolgt, sollte sie nach die abweichenden Meinungen gesetzt werden, um die abweichenden Meinungen weiter \Zitat{in der Urteilsbegründung} zu halten.
 
 Näheres zur abweichenden Meinung sollen die Schiedsgerichte in ihrer Geschäftsordnung regeln, \S~12 Abs.~4 S.~2~SGO\index[paridx]{SGO!\S12!Abs.~4}.
 
