Stichwort zum künftigen Inhalt ergänzt

--- a/Dokumentation.tex
+++ b/Dokumentation.tex
@@ -12,6 +12,7 @@
 
 %\section{Aufbewahrung der Akten}
 %elektronisch
+%Insbesondere die Veröffentlichung als Hypertext, z.B. innerhalb eines Wikis oder auf einem Blog, scheidet aus. (Vorteil von Stand-Alone-Dateien: kann man mittels PGP signieren)
 %papier (vgl. § 12 Abs. 7 SGO)
 
 %\chapterbib
